tests/sksl/errors/ArrayIndexOutOfRange.glsl
### Compilation failed:

error: 3: index -1 out of range for 'int[123]'
error: 6: index 123 out of range for 'half4x4[123]'
error: 7: index 1000000000 out of range for 'int4[123]'
error: 8: index 3000000000 out of range for 'half3[123]'
error: 9: missing index in '[]'
error: 11: index -1 out of range for 'Block[]'
error: 14: index 3000000000 out of range for 'Block[]'
error: 15: missing index in '[]'
error: 17: index -1 out of range for 'half4'
error: 22: index 4 out of range for 'half4'
error: 23: index 1000000000 out of range for 'half4'
error: 25: index -1 out of range for 'half3'
error: 29: index 3 out of range for 'half3'
error: 30: index 4 out of range for 'half3'
error: 31: index 1000000000 out of range for 'half3'
error: 33: index -1 out of range for 'half2'
error: 36: index 2 out of range for 'half2'
error: 37: index 3 out of range for 'half2'
error: 38: index 4 out of range for 'half2'
error: 39: index 1000000000 out of range for 'half2'
error: 41: index -1 out of range for 'half2x4'
error: 44: index 2 out of range for 'half2x4'
error: 45: index 3 out of range for 'half2x4'
error: 46: index 4 out of range for 'half2x4'
error: 47: index 1000000000 out of range for 'half2x4'
error: 49: index -1 out of range for 'half3x3'
error: 53: index 3 out of range for 'half3x3'
error: 54: index 4 out of range for 'half3x3'
error: 55: index 1000000000 out of range for 'half3x3'
error: 57: index -1 out of range for 'half4x2'
error: 62: index 4 out of range for 'half4x2'
error: 63: index 1000000000 out of range for 'half4x2'
error: 65: index -1 out of range for 'half2'
error: 68: index 2 out of range for 'half2'
error: 69: index 1000000000 out of range for 'half2'
error: 71: index -1 out of range for 'half3'
error: 75: index 3 out of range for 'half3'
error: 76: index 1000000000 out of range for 'half3'
error: 78: index -1 out of range for 'half4'
error: 83: index 4 out of range for 'half4'
error: 84: index 1000000000 out of range for 'half4'
41 errors
